# fibber

./: .buildinfo  .editorconfig  .gitignore  .travis.yml  BENCHMARK.md  CONTRIBUTING.rst  DATAFORMAT.md  HISTORY.md  Makefile  README.md  authors.html  benchmark.html  contributing.html  dataformat.html  folder.txt  genindex.html  history.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  deploy.yml  docs.yml  install.yaml  install.yml  lint_check.yaml  release.yaml  tests.yml
_modules/: fibber.html  index.html
_modules/fibber/: download_utils.html  fibber.html  log.html  resource_utils.html
_sources/api/: fibber.attack.advsampler.rst.txt  fibber.attack.lm.rst.txt  fibber.attack.rst.txt  fibber.attack.wordpiece_emb.rst.txt  fibber.benchmark.benchmark.rst.txt  fibber.benchmark.benchmark_adversarial_attack.rst.txt  fibber.benchmark.benchmark_style_transfer.rst.txt  fibber.benchmark.benchmark_utils.rst.txt  fibber.benchmark.customized_metric_aggregation.rst.txt  fibber.benchmark.make_overview.rst.txt  fibber.benchmark.rst.txt  fibber.classifier.rst.txt  fibber.data_utils.rst.txt  fibber.dataset.dataset_utils.rst.txt  fibber.dataset.process_ag.rst.txt  fibber.dataset.process_imdb.rst.txt  fibber.dataset.process_mnli.rst.txt  fibber.dataset.process_mr.rst.txt  fibber.dataset.process_snli.rst.txt  fibber.dataset.process_yelp.rst.txt  fibber.dataset.rst.txt  fibber.datasets.dataset_utils.rst.txt  fibber.datasets.download_datasets.rst.txt  fibber.datasets.downloadable_datasets.rst.txt  fibber.datasets.preprocess_ag.rst.txt  fibber.datasets.preprocess_imdb.rst.txt  fibber.datasets.preprocess_mnli.rst.txt  (+112 more)
_static/: documentation_options.js
api/: fibber.attack.advsampler.html  fibber.attack.html  fibber.attack.lm.html  fibber.attack.wordpiece_emb.html  fibber.benchmark.benchmark.html  fibber.benchmark.benchmark_adversarial_attack.html  fibber.benchmark.benchmark_style_transfer.html  fibber.benchmark.benchmark_utils.html  fibber.benchmark.customized_metric_aggregation.html  fibber.benchmark.html  fibber.benchmark.make_overview.html  fibber.classifier.html  fibber.data_utils.html  fibber.dataset.dataset_utils.html  fibber.dataset.html  fibber.dataset.process_ag.html  fibber.dataset.process_imdb.html  fibber.dataset.process_mnli.html  fibber.dataset.process_mr.html  fibber.dataset.process_snli.html  fibber.dataset.process_yelp.html  fibber.datasets.dataset_utils.html  fibber.datasets.download_datasets.html  fibber.datasets.downloadable_datasets.html  fibber.datasets.html  fibber.datasets.preprocess_ag.html  fibber.datasets.preprocess_imdb.html  fibber.datasets.preprocess_mnli.html  fibber.datasets.preprocess_mr.html  fibber.datasets.preprocess_snli.html  fibber.datasets.preprocess_utils.html  fibber.datasets.preprocess_yelp.html  fibber.datasets.process_dataset.html  fibber.defense_strategies.advtrain_strategy.html  fibber.defense_strategies.defense_strategy_base.html  fibber.defense_strategies.html  fibber.defense_strategies.lmag_strategy.html  fibber.defense_strategies.sapd_strategy.html  fibber.defense_strategies.sem_strategy.html  fibber.download_utils.html  (+99 more)
docs/: Makefile  conf.py  dataformat.rst  index.rst  make.bat
fibber/: __init__.py  classifier.py  data_utils.py  download_utils.py  downloadable_resources.py  fibber.py  log.py  main.py  optim_utils.py  resource_utils.py
scripts/: adversarial_attack_launcher.py  benchmark-launcher.py  benchmark_launcher.py  robust-training-launcher.py  run-baseline-basic.sh  run-baseline-textfooler.sh  run-cbs.sh  run-dbg.sh  run-exp-ag.sh  run-exp-imdb.sh  run-exp-mnli.sh  run-exp-mnlim.sh  run-exp-mr.sh  run-exp-snli.sh  run-exp-yelp.sh  style_transfer_launcher.py
tests/: test_fibber.py  test_integrity.py  test_measurement.py  test_metrics.py
(+274 files in other folders)
